--- a/packages/ckeditor5-build-classic/package.json
+++ b/packages/ckeditor5-build-classic/package.json
@@ -27,6 +27,11 @@
   "devDependencies": {
     "@ckeditor/ckeditor5-adapter-ckfinder": "^24.0.0",
     "@ckeditor/ckeditor5-autoformat": "^24.0.0",
+    "@ckeditor/ckeditor5-alignment": "^24.0.0",
+    "@ckeditor/ckeditor5-autosave": "^24.0.0",
+    "@ckeditor/ckeditor5-font": "^24.0.0",
+    "@ckeditor/ckeditor5-highlight": "^24.0.0",
+    "@ckeditor/ckeditor5-word-count": "^24.0.0",
     "@ckeditor/ckeditor5-basic-styles": "^24.0.0",
     "@ckeditor/ckeditor5-block-quote": "^24.0.0",
     "@ckeditor/ckeditor5-ckfinder": "^24.0.0",
